@@ -111,7 +111,7 @@ class ImageManagementPage extends FOGPage
 				'name'		=> $Image->get('name'),
 				'description'	=> $Image->get('description'),
 				'storageGroup'	=> $Image->getStorageGroup()->get('name'),
-				'storageGroupID'=> $Image->get('storageGroupID'),
+				'storageGroupID'=> $Image->getStorageGroup()->get('id'),
 				'osID'		=> $Image->get('osID'),
 				'os'		=> $Image->getOS()->get('name'),
 				'deployed' => checkdate($this->FOGCore->formatTime($Image->get('deployed'),'m'),$this->FOGCore->formatTime($Image->get('deployed'),'d'),$this->FOGCore->formatTime($Image->get('deployed'),'Y')) ? $this->FOGCore->formatTime($Image->get('deployed')) : 'No Data',
@@ -188,7 +188,7 @@ class ImageManagementPage extends FOGPage
 				'name'		=> $Image->get('name'),
 				'description'	=> $Image->get('description'),
 				'storageGroup'	=> $Image->getStorageGroup()->get('name'),
-				'storageGroupID'=> $Image->get('storageGroupID'),
+				'storageGroupID'=> $Image->getStorageGroup()->get('id'),
 				'osID'		=> $Image->get('osID'),
 				'os'		=> $Image->getOS()->get('name'),
 				'deployed' => checkdate($this->FOGCore->formatTime($Image->get('deployed'),'m'),$this->FOGCore->formatTime($Image->get('deployed'),'d'),$this->FOGCore->formatTime($Image->get('deployed'),'Y')) ? $this->FOGCore->formatTime($Image->get('deployed')) : 'No Data',
@@ -352,7 +352,7 @@ class ImageManagementPage extends FOGPage
 				'image_desc' => $Image->get('description'),
 				'storage_groups' => $this->FOGCore->getClass('StorageGroupManager')->buildSelectBox($Image->get('storageGroupID')),
 				'operating_systems' => $this->FOGCore->getClass('OSManager')->buildSelectBox($Image->get('osID')),
-				'image_path' => current($this->FOGCore->getClass('StorageNodeManager')->find(array('storageGroupID' => $Image->get('storageGroupID'),'isMaster' => 1,'isEnabled' => 1)))->get('path').'/&nbsp;',
+				'image_path' => current($this->FOGCore->getClass('StorageNodeManager')->find(array('storageGroupID' => $Image->getStorageGroup()->get('id'),'isEnabled' => 1)))->get('path').'/&nbsp;',
 				'image_file' => $Image->get('path'),
 				'image_types' => $this->FOGCore->getClass('ImageTypeManager')->buildSelectBox($Image->get('imageTypeID'),'','id'),
 				'is_legacy' => $Image->get('legacy') ? 'selected="selected"' : '',
